--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.13.2",
+    "jquery": "^3.5.1",
     "less": "^3.11.3",
     "less-loader": "^4.1.0",
+    "lodash": "^4.17.15",
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
