--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.13.2",
+    "eruda": "^2.3.3",
     "jquery": "^3.5.1",
     "less": "^3.11.3",
     "less-loader": "^4.1.0",
